--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,19 @@
 * {
   box-sizing: border-box;
 }
+html {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-font: #1d1d1d;
+  --color-font-darkgray: #6e6e6e;
+  --color-font-lightgray: #f5f5f5;
+  --color-link: #0071e3;
+  --color-link-focus: #81b9f1;
+  --color-border: #d2d2d2;
+  --color-header: #3a3a3a;
+  --color-section: #f5f5f5;
+  --color-shadow: rgba(0, 0, 0, .4);
+}
 body {
   /* 순서에 따라 적용되는 font가 다르다. Roboto font는 영문만 지원 되기 때문에 작성 순서에 따라 영문은 Roboto를 사용하고 한글은 Noto Sans KR을 적용 시킬 수 있다. 만약 Noto sans KR을 앞에 쓴다면 영문도 Noto Sans KR 이 적용된다.*/
   font-size: 16px;
@@ -9,13 +22,113 @@ body {
   /* word-break은 줄바꿈 단위를 정한다. 기준) 문자, 단어 */
   word-break: keep-all;
   height: 2000px;
+  color: var(--color-font);
 }
 a {
-  color: #1d1d1d;
+  color: var(--color-font);
   text-decoration: none;
 }
+img {
+  display: block;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+p {
+  line-height: 1.6;
+}
 .inner {
-  max-width: 1020px;
+  max-width: 980px;
   margin: 0 auto;
   position: relative;
+  padding: 0 20px;
 }
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 24px;
+  padding: 0 10px;
+  border: none;
+  border-radius: 100px;
+  outline: none;
+  font-size: 11px;
+  line-height: 1;
+  color: var(--color-white);
+  background-color: var(--color-link);
+  cursor: pointer;
+}
+.btn:hover {
+  opacity: .7;
+}
+.btn:focus {
+  box-shadow: 0 0 0 4px var(--color-link-focus);
+}
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+a.link {
+  color: var(--color-link);
+  font-size: 19px;
+  line-height: 1.3;
+}
+a.link:hover {
+  text-decoration: underline;
+}
+a.link::after {
+  content: " >";
+}
+.feature {
+  display: flex;
+}
+.figures {
+  flex-grow: 1;
+  position: relative;
+}
+.figures figure,
+.figures figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.figures figcaption * {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.infos {
+  display: flex;
+  flex-direction: column;
+}
+.infos.infos--center {
+  justify-content: center;
+}
+.infos.infos--end {
+  justify-content: flex-end;
+}
+.info {
+  max-width: 330px;
+  margin-bottom: 24px;
+}
+.info .icon {
+  width: 100px;
+  height: 100px;
+  margin: 0 0 -15px -30px;
+  background-image: url("../img/sprite_apps.png");
+}
+.info p {
+  font-size: 21.5px;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+
+
