--- a/css/common.css
+++ b/css/common.css
@@ -24,6 +24,9 @@ body {
   height: 2000px;
   color: var(--color-font);
 }
+main {
+  overflow: hidden;
+}
 a {
   color: var(--color-font);
   text-decoration: none;
@@ -35,6 +38,11 @@ img {
 }
 p {
   line-height: 1.6;
+}
+sup {
+  margin-right: 6px;
+  font-size: .7em;
+  vertical-align: top;
 }
 .inner {
   max-width: 980px;
@@ -127,6 +135,9 @@ a.link::after {
   transform: translate(0, 0);
   opacity: 1;
 }
+.infos--large .info {
+  max-width: 410px;
+}
 .info .icon {
   width: 100px;
   height: 100px;
@@ -156,7 +167,38 @@ a.link::after {
   font-weight: 600;
   line-height: 1.5;
 }
-
+.info a.link {
+  display: block;
+  margin-top: 44px;
+  font-size: 19.5px;
+}
+/* whitebox */
+.whitebox {
+  max-width: 1386px;
+  margin: 0 auto;
+  padding: 100px 30px;
+  border-radius: 30px;
+  background-color: var(--color-white);
+}
+.whitebox.whitebox--transparent {
+  background-color: transparent;
+}
+.whitebox .icon {
+  margin-bottom: 20px;
+}
+.whitebox h1 {
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.whitebox p {
+  margin-top: 20px;
+  font-size: 19px;
+}
+.whitebox a.link {
+  display: block;
+  margin-top: 26px;
+}
 
 /* animation keyframs */
 
